<resources>
    <string name="app_name">Book Dash</string>

    <string name="action_settings">Settings</string>
    <string name="splash">Splash Screen</string>
    <string name="action_language_choice">Language</string>
    <string name="language_selection_heading">Select a language</string>
    <string name="failed_to_download_book">Failed to download book.[%s]</string>
    <string name="error_loading_languages">Error loading available languages</string>
    <string name="error_loading_languages_try_again">Failed to load available languages. Please try again later.</string>
    <string name="book_not_available">Book not available</string>
    <string name="title_activity_about">About Book Dash</string>
    <string name="action_about">About</string>
    <string name="why_bookdash"><![CDATA[
        Children in South Africa need more books, but they cost too much purchased from publishers.
        The cheapest books have no publisher – then the only cost is printing. So our participants do
        the work of publishers in a single day. After that, anyone can get print runs sponsored and put finished books into the hands of children.
              <br/><br/>
        We believe every child should own a hundred books by the age of five. In South Africa, that means giving 600 million free books to children
        who could never afford to buy them. Every day we lose, more children grow up unable to read and write well, and to enjoy the worlds that books
        open up. ]]>
    </string>
    <string name="why_bookdash_heading">Why Book Dash?</string>
    <string name="heading_about"><![CDATA[Book Dash gathers volunteer creative professionals to create new, African storybooks that anyone can freely translate and distribute.]]>
    </string>
    <string name="send_email_chooser">Send us a mail.</string>
    <string name="no_mail_clients">There are no mail clients installed.</string>
    <string name="button_retry_text">Retry</string>
    <string name="error_loading_books">Error Loading Books</string>
    <string name="failed_to_open_book">Failed to open the book. Please try again later.</string>
    <string name="skip">SKIP</string>
    <string name="tutorial_done">DONE</string>
    <string name="tutorial_screen">Tutorial Screen</string>
    <string name="screen_book_information">Book Information</string>
    <string name="book_dash">Book Dash</string>
    <string name="about_heading">About Book Dash</string>
    <string name="about_book_info">About</string>
    <string name="date_created">Date</string>
    <string name="contributors">Contributors</string>
    <string name="book_is_downloading">Book is currently downloading.</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="settings_thank_yous">Contributors</string>
    <string name="contributions_to_app">Contributors</string>
    <string name="list_of_contributors"><![CDATA[Special thanks to the following people for contributing to making this app possible:  <br/><br/>

    <b>Michael Cook</b> - <a href="http://cookicons.co/" title="Cookicons">Cookicons</a>  - For the Book Dash App icon   <br/><br/>
    <b>Volunteers at Book Dash</b> - For the content <br/><br/>


    Imagery for Help Tutorial <a href="http://www.freepik.com">Designed by Freepik</a><br/>
    Background cartoon image from <a href="http://all-free-download.com">all-free-download.com</a>
    School imagery from <a href="http://www.freepik.com/free-vector/hand-drawn-school-graphics_720632.htm">Designed by Freepik</a>
    <div>Book Icon made by <a href="http://www.flaticon.com/authors/rami-mcmin" title="Rami McMin">Rami McMin</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>  is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
   <b> The following libraries have been used in the app: <br/></b>
    <a href="https://github.com/JakeWharton/ViewPagerIndicator">ViewPagerIndicator</a> which is licensed under the Apache License, Version 2.0.<br/>
    <a href="https://github.com/ckurtm/FabButton">FabButton</a> which is licensed under The MIT License (MIT).<br/>
      <a href="https://github.com/bumptech/glide">Glide</a> which is licensed under BSD, part MIT and Apache 2.0
]]></string>

    <string name="book_download_button">DOWNLOAD</string>


    <string name="slide_1_african_story_books">New African Story Books</string>
    <string name="slide_2_volunteer_professionals">Created by Volunteer Professionals</string>
    <string name="slide_3_download_and_go">Download and Read on the go</string>
    <string name="slide_4_different_languages">Available in different languages</string>
    <string name="slide_1_african_story_books_subtitle">That anyone can freely translate and distribute.</string>
    <string name="slide_2_volunteer_professionals_subtitle">On a single day, designers, writers and illustrators meet to create cool books.</string>
    <string name="slide_3_download_and_go_subtitle">On the bus, in a train, wherever you are - the books are there too.</string>
    <string name="slide_4_different_languages_subtitle">English, Zulu, Afrikaans, Xhosa and more!</string>

    <string name="transition_book_background" translatable="false">book_background</string>
    <string name="transition_book" translatable="false">book</string>
    <string name="filter_view_book">View Books</string>
    <string name="book_share">Share</string>
    <string name="sharing_book_title">I have just read \"%s\". Download Book Dash now and read it for free! http://play.google.com/store/apps/details?id=org.bookdash.android</string>
    <string name="invitation_title">Download Book Dash</string>
    <string name="invite_error_no_apps_found">Unfortunately no apps were found to invite your friends with.</string>
    <string name="share_book_error_no_apps_found">Unfortunately no apps were found that can share this book with your friends.</string>
    <string name="invite_using">Choose an app to invite with</string>
    <string name="invitation_subject">Install the Book Dash app for free books</string>
    <string name="invitation_message">I think you\'ll love the Book Dash app for free children\'s books.\n\nYou can get it here:\nhttps://play.google.com/store/apps/details?id=org.bookdash.android</string>
    <string name="sent_invitations_fmt">Sent invites to %d</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="action_all_books">All Books</string>
    <string name="action_downloads">Downloaded Books</string>
    <string name="no_books_downloaded">Oh no! You haven\'t \n downloaded any books.\n Head to the \"All Books\" \n section to download some!</string>
    <string name="no_books_available">No books available at the moment. Check back soon!</string>
    <string name="book_info_still_loading">Book information is still loading…</string>
    <string name="fragment_title_downloads">Downloads</string>
    <string name="delete_book_confirmation">Delete Downloaded Book</string>
    <string name="downloads_are_you_sure">Are you sure you want to delete \'%s\'? </string>
    <string name="delete_ok">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <string name="book_dash_nav_header">Book Dash</string>
    <string name="error_getting_contributors">Error fetching contributors</string>
    <string name="error_saving_selected_language">There was an error saving the selected language. Please try again later.</string>
    <string name="error_opening_languagepopover">There was an unexpected error. Please try again later.</string>
    <string name="action_search">Search</string>
    <string name="screen_title_search">Search</string>
    <string name="menu_search">Search</string>
    <string name="no_internet_text">Check your connection and try again later.</string>
    <string name="search_no_internet_text">Check your internet connection and try again.</string>
    <string name="search_no_results_found">No results found that match your query.</string>
    <string name="search_query_hint">Search books…</string>
    <string name="show_tutorial_settings_title">Show Tutorial</string>
    <string name="show_tutorial_settings_summary">Display the tutorial for this app</string>
    <string name="settings_title">Settings</string>
    <string name="error_opening_app_rating">Unable to open app rating link. Please make sure you have an internet browser installed on your device.</string>

    <string name="settings_new_book_notifications_summary">Subscribe to get notified about new books</string>
    <string name="settings_new_book_notifications">New Book Notifications</string>
    <string name="delete_book">Delete Book</string>
</resources>
