<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_all_books"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:orderInCategory="1"
            android:title="@string/action_all_books"
            />
        <item
            android:id="@+id/action_downloads"
            android:orderInCategory="2"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/action_downloads"
            />

        <item
            android:id="@+id/action_about"
            android:orderInCategory="3"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/action_about"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_thanks"
            android:orderInCategory="4"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/settings_thank_yous"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_rate_app"
            android:orderInCategory="5"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/rate_this_app"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_invite_friends"
            android:orderInCategory="6"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/invite_friends"
            app:showAsAction="never"/>
     <!--   <item
            android:id="@+id/action_settings"
            android:orderInCategory="7"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"
            app:showAsAction="never"/>-->
    </group>
</menu>