<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                tools:context=".presentation.main.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/appbackground"/>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_list_downloads"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/list_item_download">

        </android.support.v7.widget.RecyclerView>


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:title="@string/book_dash"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_loading_downloads"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        app:cpb_color="@color/colorAccent"
        app:cpb_max_sweep_angle="300"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_sweep_speed="1.0"/>

    <LinearLayout
        android:id="@+id/linear_layout_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">



        <TextView
            android:id="@+id/text_view_error_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:background="@drawable/textbox"
            android:text="@string/error_loading_books"
            android:gravity="center_vertical|center_horizontal"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/owl_reading_nobooks"/>

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_retry_text"/>
    </LinearLayout>
</RelativeLayout>